--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8081
-spring.profiles.active=test
+spring.profiles.active=dev,test
 spring.jpa.open-in-view=true
+spring.jpa.generate-ddl = true
